ODSC-37150. Add workflow yml to main
- fixed errors

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main
-      - release/**
+      - 'release/**'
       - develop
     paths:
-      - !docs/**
+      - '!docs/**'
 
   pull_request:
 
