--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -2,15 +2,6 @@ name: Unit Tests unitary
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - 'release/**'
-      - develop
-    paths:
-      - '!docs/**'
-
-  pull_request:
 
 # Cancel in progress workflows on pull_requests.
 # https://docs.github.com/en/actions/using-jobs/using-concurrency#example-using-a-fallback-value
@@ -59,45 +50,45 @@ jobs:
 
       - name: "Test config setup"
         shell: bash
-        env:
-          ADS_OCI_CONFIG_REALLIKE: ${{ secrets.ADS_OCI_CONFIG_REALLIKE }}
-          ADS_OCI_PRIVATE_KEY_REALLIKE: ${{ secrets.ADS_OCI_PRIVATE_KEY_REALLIKE }}
-        run: |
-          set -x # print commands that are executed
-          mkdir -p /home/runner/.oci
-          ls -lha
-          echo "$ADS_OCI_CONFIG_REALLIKE" > "/home/runner/.oci/config"
-          echo "$ADS_OCI_PRIVATE_KEY_REALLIKE" > "/home/runner/.oci/oci_ads_user.pem"
-          echo "key_file=/home/runner/.oci/oci_ads_user.pem" >> "/home/runner/.oci/config"
+#        env:
+#          ADS_OCI_CONFIG_REALLIKE: ${{ secrets.ADS_OCI_CONFIG_REALLIKE }}
+#          ADS_OCI_PRIVATE_KEY_REALLIKE: ${{ secrets.ADS_OCI_PRIVATE_KEY_REALLIKE }}
+#        run: |
+#          set -x # print commands that are executed
+#          mkdir -p /home/runner/.oci
+#          ls -lha
+#          echo "$ADS_OCI_CONFIG_REALLIKE" > "/home/runner/.oci/config"
+#          echo "$ADS_OCI_PRIVATE_KEY_REALLIKE" > "/home/runner/.oci/oci_ads_user.pem"
+#          echo "key_file=/home/runner/.oci/oci_ads_user.pem" >> "/home/runner/.oci/config"
 
       - name: "Test env setup"
         timeout-minutes: 20
         shell: bash
-        run: |
-          set -x # print commands that are executed
-          sudo apt-get install libkrb5-dev graphviz
-          $CONDA/bin/conda init
-          source /home/runner/.bashrc
-          pip install setuptools
-          pip install -r dev-requirements.txt
+#        run: |
+#          set -x # print commands that are executed
+#          sudo apt-get install libkrb5-dev graphviz
+#          $CONDA/bin/conda init
+#          source /home/runner/.bashrc
+#          pip install setuptools
+#          pip install -r dev-requirements.txt
 
       - name: "Run unitary tests folder with maximum ADS dependencies"
         timeout-minutes: 60
         shell: bash
-        env:
-          NB_SESSION_COMPARTMENT_OCID: ocid1.compartment.oc1.<unique_ocid>
-          CONDA_PREFIX: /usr/share/miniconda
-        run: |
-          python -m pytest -v -p no:warnings --durations=5 \
-          ${{ matrix.test-path }} \
-          --ignore "${{ matrix.ignore-path }}" \
-          --cov --cov-append --cov-report=html
+#        env:
+#          NB_SESSION_COMPARTMENT_OCID: ocid1.compartment.oc1.<unique_ocid>
+#          CONDA_PREFIX: /usr/share/miniconda
+#        run: |
+#          python -m pytest -v -p no:warnings --durations=5 \
+#          ${{ matrix.test-path }} \
+#          --ignore "${{ matrix.ignore-path }}" \
+#          --cov --cov-append --cov-report=html
 
 #       Uploading test artifacts
 #       https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts#uploading-build-and-test-artifacts
-      - name: "Save html coverage report"
-        uses: actions/upload-artifact@v3
-        with:
-          name: code-coverage-report
-          path: htmlcov/
-          retention-days: 10
+#      - name: "Save html coverage report"
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: code-coverage-report
+#          path: htmlcov/
+#          retention-days: 10
