--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -38,8 +38,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: "Test config setup"
-        shell: bash
+#      - name: "Test config setup"
+#        shell: bash
 #        env:
 #          ADS_OCI_CONFIG_REALLIKE: ${{ secrets.ADS_OCI_CONFIG_REALLIKE }}
 #          ADS_OCI_PRIVATE_KEY_REALLIKE: ${{ secrets.ADS_OCI_PRIVATE_KEY_REALLIKE }}
@@ -51,9 +51,9 @@ jobs:
 #          echo "$ADS_OCI_PRIVATE_KEY_REALLIKE" > "/home/runner/.oci/oci_ads_user.pem"
 #          echo "key_file=/home/runner/.oci/oci_ads_user.pem" >> "/home/runner/.oci/config"
 
-      - name: "Run default_setup tests folder ONLY with minimum ADS dependencies"
-        timeout-minutes: 15
-        shell: bash
+#      - name: "Run default_setup tests folder ONLY with minimum ADS dependencies"
+#        timeout-minutes: 15
+#        shell: bash
 #        env:
 #          NB_SESSION_COMPARTMENT_OCID: ocid1.compartment.oc1.<unique_ocid>
 #          NoDependency: True
