ODSC-37150. Setup unit tests
- remove workflow_dispatch from workflow yml files

--- a/.github/workflows/run-unittests-default_setup.yml
+++ b/.github/workflows/run-unittests-default_setup.yml
@@ -1,13 +1,15 @@
-name: Unit Tests - unitary/default_setup/*
+name: tests/unitary/default_setup/**
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
       - 'release/**'
       - develop
     paths:
+      - 'ads/**'
+      - setup.py
+      - '**requirements.txt'
       - '!docs/**'
 
   pull_request:
