--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -1,13 +1,15 @@
-name: Unit Tests - unitary/*
+name: tests/unitary/**
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
       - 'release/**'
       - develop
     paths:
+      - 'ads/**'
+      - setup.py
+      - '**requirements.txt'
       - '!docs/**'
 
   pull_request:
