--- a/tests/unitary/with_extras/bds/bds/krb5.conf
+++ b/tests/unitary/with_extras/bds/bds/krb5.conf
@@ -1,7 +1,7 @@
 [libdefaults]
   renew_lifetime = 7d
   forwardable = true
-  default_realm = BDACLOUDSERVICE.ORACLE.COM
+  default_realm = fake
   ticket_lifetime = 24h
   dns_lookup_realm = false
   dns_lookup_kdc = false
@@ -10,8 +10,8 @@
   #default_tkt_enctypes = aes des3-cbc-sha1 rc4 des-cbc-md5
 
 [domain_realm]
-  .adsqq.ociodscdeviad.oraclevcn.com = BDACLOUDSERVICE.ORACLE.COM
-  adsqq.ociodscdeviad.oraclevcn.com = BDACLOUDSERVICE.ORACLE.COM
+  .adsqq.ociodscdeviad.oraclevcn.com = fake
+  adsqq.ociodscdeviad.oraclevcn.com = fake
 
 [logging]
   default = FILE:/var/log/krb5kdc.log
@@ -20,7 +20,7 @@
 
 [realms]
   BDACLOUDSERVICE.ORACLE.COM = {
-    admin_server = adstestmn0.adsqq.ociodscdeviad.oraclevcn.com:749
-    kdc = adstestmn0.adsqq.ociodscdeviad.oraclevcn.com:88
-    kdc = adstestmn1.adsqq.ociodscdeviad.oraclevcn.com:88
+    admin_server = fake
+    kdc = fake
+    kdc = fake
   }
