--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -17,6 +17,7 @@ jobs:
           python-version: "3.x"
       - name: Build distribution 📦
         run: |
+          pip install wheel
           make dist
       - name: Validate
         run: |
