--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,8 +1,7 @@
 name: "[DO NOT TRIGGER] Publish to PyPI"
 
-on:
-  # To run this workflow manually from the Actions tab
-  workflow_dispatch
+# To run this workflow manually from the Actions tab
+on: workflow_dispatch
 
 jobs:
   build-n-publish:
