--- a/docs/source/yaml_schema/jobs/gitPythonRuntime.yaml
+++ b/docs/source/yaml_schema/jobs/gitPythonRuntime.yaml
@@ -74,6 +74,8 @@ spec:
       nullable: true
       required: false
       type: list
+      schema:
+        type: string
     url:
       required: false
       type: string
