--- a/docs/source/yaml_schema/jobs/pythonRuntime.yaml
+++ b/docs/source/yaml_schema/jobs/pythonRuntime.yaml
@@ -7,23 +7,11 @@ type:
   required: true
   type: string
   allowed:
-    - notebook
+    - script
 spec:
   required: true
   type: dict
   schema:
-    excludeTags:
-      required: false
-      type: list
-    notebookPathURI:
-      required: false
-      type: string
-    notebookEncoding:
-      required: false
-      type: string
-    outputUri:
-      required: false
-      type: string
     args:
       nullable: true
       required: false
@@ -39,10 +27,10 @@ spec:
           required: true
           type: string
         type:
-          required: true
-          type: string
           allowed:
             - service
+          required: true
+          type: string
     env:
       nullable: true
       required: false
@@ -50,9 +38,29 @@ spec:
       schema:
         type: dict
         schema:
-        name:
-          type: string
-        value:
-          type:
-            - number
-            - string
+          name:
+            type: string
+          value:
+            type:
+              - number
+              - string
+    scriptPathURI:
+      required: true
+      type: string
+    entrypoint:
+      required: false
+      type: string
+    outputDir:
+      required: false
+      type: string
+    outputUri:
+      required: false
+      type: string
+    workingDir:
+      required: false
+      type: string
+    pythonPath:
+      required: false
+      type: list
+      schema:
+        type: string
