ODSC-36853. Run unittests in parallel
- update coverage report colleting
- added library to run tests in parallel

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -97,7 +97,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: code-coverage-${{ matrix.name }}
-          path: .coverage.*
+          path: |
+            .coverage
+            .coverage.*
 
   coverage-report:
     name: Combine coverage report and save html report
