--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -105,6 +105,7 @@ jobs:
   coverage-report:
     name: Combine coverage report and save html report
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
       - uses: actions/checkout@v3
