ODSC-36853. Run unittests in parallel

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -91,7 +91,7 @@ jobs:
         run: |
           python -m pytest -v -p no:warnings --durations=5 -n auto --dist loadfile \
           ${{ matrix.test-path }} \
-          # --ignore "${{ matrix.ignore-path }}" \
+          --ignore "${{ matrix.ignore-path }}" \
           --cov --cov-report=
 
 #       Uploading test artifacts
