--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -89,11 +89,12 @@ jobs:
           NB_SESSION_COMPARTMENT_OCID: ocid1.compartment.oc1.<unique_ocid>
           CONDA_PREFIX: /usr/share/miniconda
         run: |
-          python -m pytest -v -p no:warnings --durations=5 -n auto --dist loadfile \
+          python -m pytest -v -p no:warnings --durations=5 \
+          -n auto --dist loadfile \
+          --cov-report= --cov= \
           ${{ matrix.test-path }} \
-          --ignore "${{ matrix.ignore-path }}" \
-          --cov --cov-report=
-          ls -R
+          --ignore "${{ matrix.ignore-path }}"
+          ls -lha
 
 #       Uploading test artifacts
 #       https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts#uploading-build-and-test-artifacts
@@ -103,8 +104,8 @@ jobs:
           # name: code-coverage-${{ matrix.name }}
           name: code-coverage-${{ matrix.python-version }}
           path: |
-            .coverage
-            .coverage.*
+            *coverage*
+            !.coveragerc
 
   coverage-report:
     name: Combine coverage report and save html report
