ODSC-36853. Run unittests in parallel

--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -105,6 +105,7 @@ jobs:
           name: code-coverage-${{ matrix.python-version }}
           path: |
             *coverage*
+            dev-requirements.txt
             !.coveragerc
 
   coverage-report:
